rex (0.8.0) unstable; urgency=low
  * version update
  * added mageia support for services and packages

 -- Jan Gehring <jan.gehring@gmail.com>  Sat, 25 Jun 2011 23:30:00 +0200

rex (0.7.1) unstable; urgency=low
  * restored the backward compatibility with perl 5.8.x
  * suppress warning if no parameter is given

 -- Jan Gehring <jan.gehring@gmail.com>  Sat, 25 Jun 2011 21:30:00 +0200

rex (0.7.0) unstable; urgency=low
  * preload a lot more default modules
  * added new functions (df, du, cp)
  * added some aliases (ln, cp, cd, ls)
  * added process management functions (kill, killall, nice, ps)
  * splitted out rex-agent and rex-master.

 -- Jan Gehring <jan.gehring@gmail.com>  Thu, 23 Jun 2011 12:00:00 +0200

rex (0.6.1) unstable; urgency=low
  * fixed documentation bugs (thanks to djill)
  * fixed #68827, rewrote is_readable/is_writable
  * handle auth failure correctly
  * mkdir now created directories recursive

 -- Jan Gehring <jan.gehring@gmail.com>  Fri, 10 Jun 2011 22:00:00 +0200

rex (0.6.0) unstable; urgency=low
  * extended download function to work with urls (http, ftp)
  * fixed bug in syntax check
  * add console parameters to needs calls as default
  * do_task now accepts an arrayRef to call multiple tasks at once
  * check if package is installed, before the installation
  * added tail function
  * added cat function
  * added -q cli parameter. for no debugging output at all.
  * added rex-master and rex-agent

 -- Jan Gehring <jan.gehring@gmail.com>  Fri, 10 Jun 2011 22:00:00 +0200

rex (0.5.1) unstable; urgency=low
  * fixed chdir command
  * fixed typo in documentation
  * documentation updates 

 -- Jan Gehring <jan.gehring@gmail.com>  Mon, 16 May 2011 22:00:00 +0200

rex (0.5.0) unstable; urgency=low
  * added file_append function, to append data to a file
  * added functions to manage /etc/hosts entries
  * added user and group management functions
  * added kmod function to load and unload kernel modules
  * version update
